# recfile

./: .gitignore  Cargo.toml  README.md  speed-test.sh
.github/workflows/: rust.yml
cpu-speed/: Cargo.toml
cpu-speed/src/: main.rs
gas/: Cargo.toml
gas/src/: ds.rs
gass/: Cargo.toml
gass/src/: codec.rs  lib.rs
recfile/: .gitignore  Cargo.toml  Makefile  README.md
recfile-examples/: Cargo.toml
recfile-examples/src/: bam-indexed-rff-cvt.rs  bam-rff-cvt.rs  block-device-io-benchmarking.rs  rff-basic-file-write.rs  rffv2-rw-speed.rs
recfile/benches/: block_device_io.rs  index_rw.rs
recfile/src/: lib.rs
recfile/src/io/: header.rs  indexed_rw.rs  mod.rs  sequential_rw.rs  v2.rs
recfile/src/util/: buffer.rs  mod.rs  stack.rs
src/: lib.rs
src/io/: mod.rs  v1.rs  v2.rs
