[package]
name = "recfile"
version = "0.1.2"
edition = "2024"
description = "A library for sequentially reading and writing serialized structured records."
license = "MIT"
repository  = "https://github.com/keithyin/recfile"
exclude = [
    "test_data/*"
]


[dependencies]
crossbeam = "0.8"
bincode={version="2", features = ["derive", "alloc"]}
clap={version="4", features=["derive"]}
rust-htslib = "0.49"
gskits = "0.15"
libc = "0.2"
io-uring = "0.7"

[dev-dependencies]
tempfile = "3"

