[package]
name = "gas"
version = "0.1.0"
edition = "2024"
description = "gas"
license = "MIT"
repository  = "https://github.com/keithyin/recfile"

[dependencies]
rust-htslib = "0.49"
gskits = "0.15"
crossbeam = "0.8"
bincode={version="2", features = ["derive", "alloc"]}
zstd = "0.13"
lz4_flex = "0.11"


[dependencies.recfile]
version = "0.1.5"

