[package]
name = "gass"
version = "0.1.2"
edition = "2024"
description = "gass"
license = "MIT"
repository  = "https://github.com/keithyin/recfile"

[dependencies]
rust-htslib = "0.49"
gskits = "0.15"
crossbeam = "0.8"
bincode={version="2", features = ["derive", "alloc"]}
zstd = "0.13"
lz4_flex = "0.11"
# recfile = "0.1.7"

