[package]
name = "recfile"
version = "0.3.0"
edition = "2024"
description = "A library for sequentially reading and writing serialized structured records."
license = "MIT"
repository  = "https://github.com/keithyin/recfile"
exclude = [
    "test_data/*"
]


[dependencies]
crossbeam = "0.8"
bincode={version="2", features = ["derive", "alloc"]}
libc = "0.2"
io-uring = "0.7"
anyhow = "1"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
gskits = "0.15"
criterion = "0.3"


[[bench]]
name = "index_rw"
harness = false